# Healthcare-Symptom-Triage-Assistant

./: .gitignore  Agents.md  README.md  docker-compose.yml  pytest.ini  render.yaml
.github/workflows/: deploy-frontend-pages.yml
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  db.py  main.py  models.py  schemas.py  triage_graph.py
backend/tests/: test_triage_graph.py
docs/: langgraph-hosting-architecture.excalidraw
frontend/: index.html  live-server.mjs  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
tests/: conftest.py  test_api_contract.py  test_edge_cases.py  test_frontend_behavior.py  test_graph_workflow.py  test_red_flags.py  test_safety.py  test_triage_logic.py  test_validation.py
