[project]
name = "langgraph-symptom-triage"
version = "0.1.0"
description = "Minimal LangGraph multi-agent symptom triage assistant"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "langgraph>=0.2",
  "langchain-core>=0.3",
  "langchain-openai>=0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

